--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         Ratih Swastika Permata, S.Des, M.Pd</span> <br>
                     <span style="
                 font-size: .7rem;
-                color: black;">Putri Sulung dari Bapak Karnadi dan Ibu Bariah</span>
+                color: black;">Putri Sulung dari Bapak Karnadi dan Ibu Bariah Kurniawati</span>
                 </p>
                 <p data-aos="fade-left" data-aos-duration="2000">
                     <img src="assets/images/rahmat.webp" class="img-mempelai"> <br>
