--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 color: #585252;
                 font-size: 1em;
                 margin-bottom: 0px;">
-                Rahmat menyatakan keseriusan <br> dan meminta restu kepada kedua <br> orang tua ratih
+                    Rahmat menyatakan keseriusan <br> dan meminta restu kepada kedua <br> orang tua ratih
                 </p>
                 <img src="assets/images/panah-cinta.webp" width="50px" data-aos="fade-up" data-aos-duration="1250">
             </div>
@@ -305,7 +305,7 @@
                 color: #585252;
                 font-size: .7em;
                 margin-bottom: .3em;">
-                Rahmat menyatakan keseriusan <br> dan meminta restu kepada kedua <br> orang tua ratih
+                    Rahmat menyatakan keseriusan <br> dan meminta restu kepada kedua <br> orang tua ratih
                 </p>
                 <img src="assets/images/panah-cinta.webp" width="25px" data-aos="fade-up" data-aos-duration="1250">
             </div>
@@ -385,12 +385,35 @@
 
                     <div class="overflow-x-hidden">
                         <div class="row justify-content-center">
-                            <div class="col-12 card-body p-3 m-3" style="max-width: 25rem;" data-aos="fade-down"
+                            <div class="col-12 card-body p-3 m-3" style="max-width: 40rem;" data-aos="fade-down"
                                 data-aos-duration="1500">
-                                <img src="assets/images/qr.webp" class="img-fluid rounded" width="300" alt="qr">
-                                <p class="card-text bg-white mt-4 rounded-4">
-                                    <img src="assets/images/qr2.webp" class="img-fluid rounded" width="400" alt="bni">
-                                </p>
+                                <div class="row mb-5">
+                                    <div class="col-sm-6">
+                                        <div class="text-center m-2" style="color: #000; font-size: 1em;"> BCA -
+                                            2180215363 </div>
+                                        <div class="text-center m-2" style="color: #000; font-size: 1em;"> a.n. Ratih
+                                            Swastika Permata</div>
+                                        <button class="btn btn-light" data-nomer="2180215363" onclick="salin(this)"> <i
+                                                class="fas fa-copy"></i> Salin Nomor </button>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="text-center m-2" style="color: #000; font-size: 1em;"> BCA -
+                                            0920166962 </div>
+                                        <div class="text-center m-2" style="color: #000; font-size: 1em;"> a.n. Rahmat
+                                            Sumantri</div>
+                                        <button class="btn btn-light" data-nomer="0920166962" onclick="salin(this)"> <i
+                                                class="fas fa-copy"></i> Salin Nomor</button>
+                                    </div>
+                                </div>
+                                <div class="text-center mt-5" style="color: #585252;"> <i class="fas fa-home fa-3x"></i>
+                                </div>
+                                <div class="text-center m-3"
+                                    style="color: #585252; font-size: 2em; font-family: 'SweetRomance' !important">
+                                    Alamat Kirim Fisik Hadiah</div>
+                                <div class="text-center m-3" style="color: #000; font-size: 1em;"> Jl. Komplek IPB 1
+                                    RT.04/08 No.140, Loji. Bogor Barat. Kota Bogor</div>
+                                <div class="text-center m-3" style="color: #000; font-size: 1em;"> Penerima : Ratih /
+                                    Rahmat</div>
                             </div>
                         </div>
                     </div>
@@ -512,15 +535,7 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/aos.min.js"></script>
-<<<<<<< HEAD
     <script src="js/app.min.js"></script>
-
-    <script>
-        $('[data-aos]').parent().addClass('hideOverflowOnMobile');
-    </script>
-=======
-    <script src="js/app.js"></script>
->>>>>>> 11dc1b2b9cc14430870352789d3a511a691fb507
 </body>
 
 </html>
