--- a/index.html
+++ b/index.html
@@ -388,31 +388,31 @@
                             <div class="col-12 card-body p-3 m-3" style="max-width: 40rem;" data-aos="fade-down"
                                 data-aos-duration="1500">
                                 <div class="row mb-5">
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-6 mb-3">
                                         <div class="text-center m-2" style="color: #000; font-size: 1em;"> BCA -
                                             2180215363 </div>
-                                        <div class="text-center m-2" style="color: #000; font-size: 1em;"> a.n. Ratih
+                                        <div class="text-center m-2" style="color: #000; font-size: .8em;"> a.n. Ratih
                                             Swastika Permata</div>
-                                        <button class="btn btn-light" data-nomer="2180215363" onclick="salin(this)"> <i
+                                        <button class="btn btn-light btn-sm" data-nomer="2180215363" onclick="salin(this)"> <i
                                                 class="fas fa-copy"></i> Salin Nomor </button>
                                     </div>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-6 mb-3">
                                         <div class="text-center m-2" style="color: #000; font-size: 1em;"> BCA -
                                             0920166962 </div>
-                                        <div class="text-center m-2" style="color: #000; font-size: 1em;"> a.n. Rahmat
+                                        <div class="text-center m-2" style="color: #000; font-size: .8em;"> a.n. Rahmat
                                             Sumantri</div>
-                                        <button class="btn btn-light" data-nomer="0920166962" onclick="salin(this)"> <i
+                                        <button class="btn btn-light btn-sm" data-nomer="0920166962" onclick="salin(this)"> <i
                                                 class="fas fa-copy"></i> Salin Nomor</button>
                                     </div>
                                 </div>
-                                <div class="text-center mt-5" style="color: #585252;"> <i class="fas fa-home fa-3x"></i>
+                                <div class="text-center" style="color: #585252;"> <i class="fas fa-home fa-3x"></i>
                                 </div>
                                 <div class="text-center m-3"
                                     style="color: #585252; font-size: 2em; font-family: 'SweetRomance' !important">
                                     Alamat Kirim Fisik Hadiah</div>
-                                <div class="text-center m-3" style="color: #000; font-size: 1em;"> Jl. Komplek IPB 1
+                                <div class="text-center m-3" style="color: #000; font-size: .8em;"> Jl. Komplek IPB 1
                                     RT.04/08 No.140, Loji. Bogor Barat. Kota Bogor</div>
-                                <div class="text-center m-3" style="color: #000; font-size: 1em;"> Penerima : Ratih /
+                                <div class="text-center m-3" style="color: #000; font-size: .8em;"> Penerima : Ratih /
                                     Rahmat</div>
                             </div>
                         </div>
